--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 1</h1>
-                        <a href="https://www.youtube.com/">
+                        <a href="https://madaansahaab777.github.io/todolist/">
                             <h2>TO Do List</h2>
                         </a>
                         <p>This is a basic To Do UI design in which the user can add their daily works by filling the input and hit ADD TO LIST. After the work is done user can also remove it using the delete button.</p>
@@ -291,7 +291,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 2</h1>
-                        <a href="https://www.youtube.com/">
+                        <a href="https://madaansahaab777.github.io/password_generator/">
                             <h2>Password Generator</h2>
                         </a>
                         <p>This is an Amazing website made through JavaScript .Sometimes choosing a secure passsword for your account becomes a great problem.So with this user can create a random password .</p>
@@ -303,7 +303,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 3</h1>
-                        <a href="https://www.youtube.com/">
+                        <a href="https:https://madaansahaab777.github.io/secret_message/">
                             <h2>Secret Message</h2>
                         </a>
                         <p>Here we have a text box area where we can write our secret message, on pressing ENTER this text is converted into a random QR code . By scanning the QR code you can decode your secret message .</p>
@@ -315,7 +315,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 4</h1>
-                        <a href="https://www.youtube.com/">
+                        <a href="http://dbindia.000webhostapp.com/">
                             <h2>Banking System</h2>
                         </a>
                         <p>A dynamic website with Customer details database using MYSQL, this explains the basic workflow of transfer money or how transactions can be done in a real banking system . </p>
