--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 1</h1>
-                        <a href="https://madaansahaab777.github.io/todolist/">
+                        <a href="https://github.com/madaansahaab777/todolist">
                             <h2>TO Do List</h2>
                         </a>
                         <p>This is a basic To Do UI design in which the user can add their daily works by filling the input and hit ADD TO LIST. After the work is done user can also remove it using the delete button.</p>
