--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 3</h1>
-                        <a href="https:https://madaansahaab777.github.io/secret_message/">
+                        <a href="https://madaansahaab777.github.io/secret_message/">
                             <h2>Secret Message</h2>
                         </a>
                         <p>Here we have a text box area where we can write our secret message, on pressing ENTER this text is converted into a random QR code . By scanning the QR code you can decode your secret message .</p>
