--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <img src="images/mad.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Ashish and I'm an <span class="typing-2">Engineer</span></div>
+                    <div class="text">I'm Ashish . I'm a <span class="typing-2">Computer Engineer</span></div>
                     <p>Learning enthusiast looking for wider opportunities. Solution oriented professional, keen to
-                        learn and develop so that can work for the development of the environment around him. Skilled in
-                        HTML5, CSS, Python 3, C++, JAVA, Graphic Designing, Public Speaking, Management, etc.
+                        learn and develop so that can work for the development of the environment around me. Skilled in
+                         C++, JAVA, HTML5, CSS, JavaScript, OOPS, Public Speaking, Management etc.
                         <br>
                         Strong business development professional with a Bachelor of Technology - B.Tech focused in
                         Computer Engineering from The Technological Institute of Textiles & Sciences.</p>
@@ -74,7 +74,7 @@
             <h2 class="title">My Skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">My creative skills & expirences</div>
+                    <div class="text">My creative skills & experiences</div>
                     <p>A young cheerful Technophile, who is always ready to take up new challenges. My strengths are my
                         strong will power and my NEVER GIVE UP attitude. I believe
                         in smart work, rather than doing useless hardwork. I can easily adapt myself according to the
@@ -169,8 +169,8 @@
                     </div>
                     <h3 class="experience-designation  m0 m-blue"> Sales And Marketing Intern</h3>
                     <h4 class="experience-company-name">MyCaptain</h4>
-                    <h5 class="experience-duration"> Currently persuing </h5>
-                    <p class="experience-description text-align-justify">This is a good practice besides working on my
+                    <h5 class="experience-duration"> October 2020 </h5>
+                    <p class="experience-description text-align-justify">This is a good practice for a beginner. Besides working on my
                         marketing stategies, I am dealing
                         with <b>overall development by making relationship over linkedin and other SocialMedia.</b> This
                         training played a vital role in building strong inter personal relations with some amazing
@@ -188,7 +188,7 @@
                     <h3 class="experience-designation"> Python 101 for Data Science</h3>
                     <h4 class="experience-company-name"> Cognitive Class </h4>
                     <h5 class="experience-duration"> October 2020</h5>
-                    <p class="experience-description text-align-justify"> Covered all fundamentals starting right form
+                    <p class="experience-description text-align-justify"> Covered all fundamentals starting right from
                         Flow Charts, Data Types, Loops,etc till Tuples, Dictionaries, Sets.<br><b>Obtained Certificate
                             of Excellence by Cognitive Class powered by IBM, India </b><br><a
                             href="https://drive.google.com/file/d/1DPYG-YV6npk96wPYnX-El2GCCLASASuC/view?usp=drivesdk"
@@ -206,7 +206,7 @@
                     <h4 class="experience-company-name"> Microsoft</h4>
                     <h5 class="experience-duration"> Oct 2020</h5>
 
-                    <p class="experience-description text-align-justify">This is my first ever virtual internship and got some insight into some of the tasks done in relation to <b>Microsoft cukture, azure fundamentals & smartgoals </b>This training focused on building the <b>Digital transformation .</b><br><a
+                    <p class="experience-description text-align-justify">This is my first ever virtual internship and got some insight into some of the tasks done in relation to <b>Microsoft culture, azure fundamentals & smartgoals </b>This training focused on building the <b>Digital transformation .</b><br><a
                             href="https://drive.google.com/file/d/1NVNTQmLFyqT1HmTEWyGXJs3AxQSR_fw5/view?usp=drivesdk"
                             target="_blank">View Certificate</a></p>
                 </div>
@@ -221,7 +221,7 @@
                     <h4 class="experience-company-name"> BitDegree </h4>
                     <h5 class="experience-duration m0"> May 2020 </h5>
 
-                    <p class="experience-description text-align-justify">This cource give a knowledge of <b>Profit of
+                    <p class="experience-description text-align-justify">This course gives me a knowledge of <b>Profit of
                             Buying and Selling
                             Domain Names </b> in Digital Real Estate.<br><a
                             href="https://drive.google.com/file/d/1PZbVIlMtijKpAByUOudLg-DATVFPH6ks/view?usp=drivesdk"
