--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <h3 class="experience-designation  m0 m-blue"> Sales And Marketing Intern</h3>
                     <h4 class="experience-company-name">MyCaptain</h4>
-                    <h5 class="experience-duration"> October 2020 </h5>
+                    <h5 class="experience-duration"> Oct - Nov 2020 </h5>
                     <p class="experience-description text-align-justify">This is a good practice for a beginner. Besides working on my
                         marketing stategies, I am dealing
                         with <b>overall development by making relationship over linkedin and other SocialMedia.</b> This
@@ -187,7 +187,7 @@
                     </div>
                     <h3 class="experience-designation"> Python 101 for Data Science</h3>
                     <h4 class="experience-company-name"> Cognitive Class </h4>
-                    <h5 class="experience-duration"> October 2020</h5>
+                    <h5 class="experience-duration"> Oct - Nov 2020</h5>
                     <p class="experience-description text-align-justify"> Covered all fundamentals starting right from
                         Flow Charts, Data Types, Loops,etc till Tuples, Dictionaries, Sets.<br><b>Obtained Certificate
                             of Excellence by Cognitive Class powered by IBM, India </b><br><a
@@ -204,7 +204,7 @@
                     </div>
                     <h3 class="experience-designation m0 m-blue">Virtual Experience Program</h3>
                     <h4 class="experience-company-name"> Microsoft</h4>
-                    <h5 class="experience-duration"> Oct 2020</h5>
+                    <h5 class="experience-duration"> October 2020</h5>
 
                     <p class="experience-description text-align-justify">This is my first ever virtual internship and got some insight into some of the tasks done in relation to <b>Microsoft culture, azure fundamentals & smartgoals </b>This training focused on building the <b>Digital transformation .</b><br><a
                             href="https://drive.google.com/file/d/1NVNTQmLFyqT1HmTEWyGXJs3AxQSR_fw5/view?usp=drivesdk"
