--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C808ZCM3ZL"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ7B3MMBZS"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-C808ZCM3ZL');
-    </script>   
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DJ7B3MMBZS');
+    </script> 
 </head>
 
 <body>
