--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 2</h1>
-                        <a href="https://madaansahaab777.github.io/password_generator/">
+                        <a href="https://am282000.github.io/password_generator/">
                             <h2>Password Generator</h2>
                         </a>
                         <p>This is an Amazing website made through JavaScript .Sometimes choosing a secure passsword for your account becomes a great problem.So with this user can create a random password .</p>
@@ -311,7 +311,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Project 3</h1>
-                        <a href="https://madaansahaab777.github.io/secret_message/">
+                        <a href="https://am282000.github.io/secret_message/">
                             <h2>Secret Message</h2>
                         </a>
                         <p>Here we have a text box area where we can write our secret message, on pressing ENTER this text is converted into a random QR code . By scanning the QR code you can decode your secret message .</p>
@@ -417,7 +417,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/madaansahaab777" target="_blank">
+                    <a href="https://github.com/am282000" target="_blank">
                         <img src="https://img.icons8.com/fluent/48/000000/github.png" alt="GitHub Logo">
                     </a>
                 </li>
