--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <!-- footer section start -->
 
     <footer>
-        <span>Created by <a href="#">Ashish Madan</a> | <span class="far fa-copyright"></span> 2020 All rights
+        <span>Created by <a href="#">Ashish Madan</a> | <span class="far fa-copyright"></span> All rights
             reserved.</span>
     </footer>
 
