--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
+    <div id="particles-js" style="position: absolute;"></div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio</span></a> </div>
@@ -44,7 +45,7 @@
     </nav>
 
     <!-- Home section -->
-    <div id="particles-js">
+    
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -62,7 +63,7 @@
         console.log('callback - particles.js loaded');
       });
       </script>
-    </div>
+    
     <!-- about section start -->
    
     <section class="about" id="about">
