--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                          C++, JAVA, HTML5, CSS, JavaScript, OOPS, Public Speaking, Management etc.
                         <br>
                         Strong business development professional with a Bachelor of Technology - B.Tech focused in
-                        Computer Engineering from The Technological Institute of Textiles & Sciences.</p>
+                        Computer Engineering from The Technological Institute of Textile & Sciences.</p>
                     <a href="images/Ashish CV.jpg" download="Ashish CV">Download CV</a>
                 </div>
             </div>
