--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <br>
                         Strong business development professional with a Bachelor of Technology - B.Tech focused in
                         Computer Engineering from The Technological Institute of Textile & Sciences.</p>
-                    <a href="images/Ashish CV.jpg" download="Ashish CV">Download CV</a>
+                    <a href="images/Ashish_Resume.jpg" download="Ashish Resume">Download CV</a>
                 </div>
             </div>
         </div>
